# DuolinGal

./: .gitignore  LICENSE  README.md  duolin_gal_项目方案_千恋万花版.md  pyproject.toml
apps/api/: README.md
apps/web/: README.md
configs/: toolchain.example.json
docs/: README.en.md  dataset-export.zh-CN.md  feasibility.zh-CN.md  gptsovits-batch.zh-CN.md  gptsovits-local-runbook.zh-CN.md  gptsovits-prep.zh-CN.md  gptsovits-production.zh-CN.md  gptsovits-reinject.zh-CN.md  gptsovits-training.zh-CN.md  local-validation-checklist.zh-CN.md  patch-packaging.zh-CN.md  path-assumptions.zh-CN.md  project-plan.zh-CN.md  single-line-poc.zh-CN.md  structure-and-runtime.zh-CN.md
src/duolingal/: __init__.py  __main__.py  cli.py  config.py
src/duolingal/api/: app.py
src/duolingal/core/: aligner.py  analyzer.py  dataset_export.py  decompiler.py  extractor.py  final_cleanup.py  gptsovits_batch.py  gptsovits_prep.py  gptsovits_production.py  gptsovits_reinject.py  gptsovits_training.py  krkrdump.py  parser.py  patching.py  poc.py  preflight.py  process_runner.py  tool_config.py  tooling.py  workspace.py
src/duolingal/domain/: models.py
src/duolingal/services/: project_service.py
tests/: support.py  test_analyzer.py  test_cli.py  test_dataset_export.py  test_decompiler.py  test_extractor.py  test_gptsovits_prep.py  test_gptsovits_production.py  test_gptsovits_training.py  test_krkrdump.py  test_parser.py  test_patching.py  test_poc.py  test_preflight.py  test_process_runner.py  test_tool_config.py  test_workspace.py
