[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "duolingal"
version = "0.1.0"
description = "A local-first tooling prototype for English-dub galgame experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.11,<3"]

[project.optional-dependencies]
api = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
duolingal = "duolingal.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
